@@ -44,7 +44,7 @@ command = meth_coll_pick
 header  = PICKING A SONG
 [Collect / COLL_RELATIONS]
 command = meth_coll_relations
-header  = SONGS, ALBUMS & ARTISTS RELATIONS
+header  = SONGS, ALBUMS, ARTISTS & GENRES RELATIONS
 
 ; audio::mpd::playlist
 [Collect / PLAY_INFO]
